...
        verticalArrangement = Arrangement.SpaceBetween,
    ) {
        TextButton(
            onClick = onFinished,
            modifier = Modifier.align(Alignment.End),
        ) {
            Text("Skip")
        }

        Column(
            modifier = Modifier
                .weight(1f)
                .fillMaxWidth()
...
